fix left-column overlap onto comments section

--- a/src/components/comments/Comments.css
+++ b/src/components/comments/Comments.css
@@ -1,7 +1,7 @@
 /* Comments component */
 .comments {
   background: #333333;
-  margin-top: 1%;
+  margin-top: 2%;
   padding: 5% 2% 10% 2%;
 }
 .comments h1 {
