--- a/src/components/expanded/Expanded.css
+++ b/src/components/expanded/Expanded.css
@@ -8,7 +8,7 @@
 .wrapper {
   overflow-x: none;
   display: flex;
-  height: 80vh;
+  height: 85vh;
 }
 .left-column {
   width: 50%;
@@ -18,6 +18,7 @@
 .right-column {
   width: 50%;
   padding-left: 1%;
+  height: 97%;
 }
 .hidden {
   position: absolute;
@@ -57,7 +58,8 @@
   background: #333333;
 }
 #expanded-project-description {
-  height: calc(100% - 22vh - 2em - 210px);
+  /*height: calc(100% - 22vh - 2em - 210px);*/
+  height: 41%;
   overflow-y: auto;
   background: #666666;
 }
